article and section added instead of div

--- a/index.html
+++ b/index.html
@@ -513,7 +513,8 @@
                 <img src="images/gam2.jpg">
                 <img src="images/gam3.jpeg">
                 <img src="images/gaiming.jpg">
-                <img src="images/deadpool.jpg">   
+                <img src="images/deadpool.jpg">  
+                <!---testing of commit--> 
             </div>
             <a href="https://instagram.com"><span class="icon-instagram"></span> Instagram</a>
             <div class="footer-laster">
